--- a/docs/v0.1.0/en/doc/config/gen_ui_toml.mdx
+++ b/docs/v0.1.0/en/doc/config/gen_ui_toml.mdx
@@ -62,11 +62,8 @@ makepad-widgets = { path = "/Users/shengyifei/projects/makepad/makepad/widgets" 
         |`entry`|`Option<String>`|Entry file name|
         |`root`|`RootConf`|Entry configuration, including UI entry address and window properties|
         |`dependencies`|`Option<Vec<RustDependence>>`|Rust dependencies|
+        |`router`|`Option<PathBuf>`|Path of the router.toml|
         |`wasm`|`Option<WasmConf>`|wasm related configuration (compilation synchronization mode, not supported yet)|
-
-        #### `entry`
-
-        - `Option<String>`
 
         #### `[makepad.root]`
 
