--- a/docs/v0.1.0/en/doc/config/types.mdx
+++ b/docs/v0.1.0/en/doc/config/types.mdx
@@ -66,6 +66,7 @@ pub struct CompilerConf {
     pub logo: bool,
     pub log_level: LogLevel,
     pub excludes: Excludes,
+    pub router: Option<PathBuf>,
 }
 ```
 
