--- a/docs/v0.1.0/zh/doc/config/gen_ui_toml.mdx
+++ b/docs/v0.1.0/zh/doc/config/gen_ui_toml.mdx
@@ -62,11 +62,8 @@ makepad-widgets = { path = "/Users/shengyifei/projects/makepad/makepad/widgets" 
         |`entry`|`Option<String>`|入口文件名|
         |`root`|`RootConf`|入口配置，包含UI入口地址和窗口属性|
         |`dependencies`|`Option<Vec<RustDependence>>`|Rust依赖项|
+        |`router`|`Option<PathBuf>`|路由相关配置的路径|
         |`wasm`|`Option<WasmConf>`|wasm相关配置(编译同步模式, 暂不支持)|
-
-        #### `entry`
-
-        - `Option<String>`
 
         #### `[makepad.root]`
 
