--- a/docs/v0.1.0/zh/doc/config/types.mdx
+++ b/docs/v0.1.0/zh/doc/config/types.mdx
@@ -65,6 +65,7 @@ pub struct CompilerConf {
     pub logo: bool,
     pub log_level: LogLevel,
     pub excludes: Excludes,
+    pub router: Option<PathBuf>,
 }
 ```
 
