--- a/docs/v0.1.0/en/components/feedback/dropdown.mdx
+++ b/docs/v0.1.0/en/components/feedback/dropdown.mdx
@@ -36,7 +36,7 @@ Use dialog as drop-down option
 | `offset_x`     | X-axis offset    | `F32`         |
 | `offset_y`     | Y-axis offset    | `F32`         |
 | `visible`      | Visible or not   | `bool`        |
-| `proportionv   | Proportion       | `F32`         |
+| `proportion`   | Proportion       | `F32`         |
 | `event_key`    | Event identifier | `bool`        |
 
 ### Events Table
